# pyxora

./: README.md  index.html  pyproject.toml
.github/workflows/: deploy-docs.yml  python-syntax.yml
src/: __init__.py  __main__.py  assets.py  camera.py  display.py  object.py  objects.py  scene.py
src/data/template/: main.py
src/docs/: local.py
src/editor/: app.py  constants.py  input.py  runtime.py
src/editor/ui/: __init__.py  code_editor.py  console.py  controls.py  explorer.py  inspector.py  preview.py  window.py  workspace.py
src/projects/: __init__.py
src/utils/: engine.py
